tests/NormalTests/paczka1/small_fuzzy/80813571.err
Error in line 2: nioPT2gLcpG S182 7,9
Error in line 6: A577 S182 85,4
Error in line 8: roZ2NS A331 27,1
